--- a/cjax/core/js/.htaccess
+++ b/cjax/core/js/.htaccess
@@ -5,5 +5,5 @@ Allow from all
 <IfModule mod_rewrite.c>
 	RewriteEngine On
 	#RewriteBase /
-RewriteRule  ^/?cjax\.js$	cjax-//@version;.js [NC,QSA,L]
+RewriteRule  ^/?(cjax\.*js)$	$1 [NC,QSA,L]
 </IfModule>
