--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"description": "Cjax ajax framework",
-	"name": "cjax/framework",
+	"name": "ajaxboy/cjax",
 	"type": "project",
 	"homepage": "https://github.com/ajaxboy/cjax",
 	"license": "MIT",
