--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"description": "Cjax ajax framework",
+	"description": "ajax framework for PHP",
 	"name": "ajaxboy/cjax",
 	"type": "project",
 	"homepage": "https://github.com/ajaxboy/cjax",
