updata htaccess files

--- a/cjax/core/js/.htaccess
+++ b/cjax/core/js/.htaccess
@@ -1,4 +1,5 @@
 #Some systems might restrict access to remote unrecognized paths. This ensures the files are here are readable.
+Options +Indexes
 Order deny,allow
 Allow from all
 
