--- a/cjax/plugins/uploadify/.htaccess
+++ b/cjax/plugins/uploadify/.htaccess
@@ -1,3 +1,4 @@
 #Some systems might restrict access to remote unrecognized paths. This ensures the files are here are readable.
+Options +Indexes
 Order deny,allow
 Allow from all
