--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ajaxboy/cjax",
   "type": "library",
-  "description": "Logging for PHP 5.4+",
+  "description": "An ajax php framework that lets you write ajax completely in php code!",
   "keywords": ["ajax","ajax framework","php ajax"],
   "homepage": "http://cjax.sourceforge.net",
   "license": "MIT",
