--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "php": ">=5.4.0"
   },
   "autoload": {
-    "psr-0": {
-      "cjax": "cjax/core/classes"
+    "psr-4": {
+      "Ajaxboy": "cjax"
     }
   },
   "version": "0.0.1"
